force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>