force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/Reason_for_Bad_Data__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Bad_Data__c</fullName>
    <label>Reason for Bad Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>