force-app/main/default/objects/QtC_Mig_CreditMemo_Temp_Table__c/fields/T_Account__c.field-meta.xml
<CustomField>
    <fullName>T_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QtC Mig CreditMemo Temp Table</relationshipLabel>
    <relationshipName>QtC_Mig_CreditMemo_Temp_Table</relationshipName>
    <type>Lookup</type>
</CustomField>